--- a/Accueil.css
+++ b/Accueil.css
@@ -60,6 +60,10 @@ main {
 .news-small .news-card .desc h1 {
     font-size: 20px;
     font-weight: 600;
+    width: 515px;
+    white-space: nowrap;
+     overflow: hidden;
+     text-overflow: ellipsis;
 }
 
 .news-small .news-card .desc {
@@ -67,6 +71,7 @@ main {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
+    width: 100%;
 }
 
 .news-small .news-card .desc .links {
@@ -108,3 +113,125 @@ main {
     color: var(--col-white);
     background-color: var(--col-orange);
 }
+
+.news-big {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: var(--col-gray);
+    color: var(--col-white);
+    overflow: hidden;
+    margin-top: 16px;
+}
+
+.news-big .news-big-img {
+    width: 100%;
+    height: auto;
+}
+
+.news-big .news-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px;
+    width: 100%;
+}
+
+.news-big .news-card .time {
+    background-color: var(--col-gray-light);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 54px;
+    min-height: 72px;
+    margin-right: 18px;
+}
+
+.news-big .news-card .time h2 {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.news-big .news-card .time h3 {
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: 13px;
+}
+
+.news-big .news-card .desc h1 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.news-big .news-card .desc {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+}
+
+.news-big .news-card .desc .links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.news-big .news-card .desc .links .author {
+    text-decoration: none;
+}
+
+.news-big .news-card .desc .links .author img {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+.news-big .news-card .desc .links .author span {
+    color: var(--col-white);
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.news-big hr {
+    color: var(--col-gray-light);
+    width: 100%;
+    opacity: 1;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.news-big .content {
+    padding: 24px;
+}
+
+.news-big .content p {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 500;
+}
+
+.news-big .readmore {
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1.25px;
+    color: var(--col-orange);
+    transition: color 350ms, background-color 350ms;
+    border-radius: 10px;
+    padding: 12px;
+    float: right;
+}
+
+.news-big .readmore:hover {
+    color: var(--col-white);
+    background-color: var(--col-orange);
+}
+
