--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
     --col-gray-dark: #1f2024;
     --col-white: white;
     --col-white-dark: #C2C0D6;
-    --col-orange: #fd7e14;
-    --col-orange-hover: #f57002;
+    --col-orange: #4d94fd;
+    --col-orange-hover: #247bfd;
     --col-purple: #a100f2;
     --col-purple-hover: #9000d8;
     --col-gray: #333333;
